--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@reduxjs/toolkit": "^1.7.2",
     "@stitches/react": "^1.2.6",
     "aos": "^3.0.0-beta.6",
+    "firebase": "^9.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "recharts": "^2.1.9"
