--- a/package.json
+++ b/package.json
@@ -8,23 +8,27 @@
   },
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^0.1.7",
+    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-popover": "^0.1.6",
     "@reduxjs/toolkit": "^1.7.2",
     "@stitches/react": "^1.2.6",
-    "aos": "^3.0.0-beta.6",
-    "firebase": "^9.7.0",
+    "firebase": "^9.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
-    "recharts": "^2.1.9"
+    "react-select": "^5.3.2",
+    "recharts": "^2.1.11",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
+    "typescript": "^4.7.4",
     "vite": "^2.7.2"
   }
 }
