--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gary-oak",
   "version": "0.0.0",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
