--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
     "@radix-ui/react-popover": "^0.1.6",
     "@reduxjs/toolkit": "^1.7.2",
     "@stitches/react": "^1.2.6",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-shape": "^3.1.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "firebase": "^9.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
-    "react-redux": "^7.2.6",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-select": "^5.3.2",
-    "recharts": "^2.1.11",
+    "recharts": "^2.1.12",
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.7.4",
     "vite": "^2.7.2"
